# eidetic-music-tools

./: .gitignore  AGENTS.md  README.md  STATUS.md
ableton-tools/: README.md
ableton-tools/src/abletontools/: cli.py
decisions/: 2026-07-07-sample-management-advance-assessment.md  2026-07-08-high-precision-kicks-gate-assessment.md  2026-07-08-repo-selection-for-sample-tools.md  2026-07-09-drum-role-classifier-adopted.md  2026-07-19-studio-repo-split.md
docs/: GETTING-STARTED.md  SAFETY.md  SAMPLE-FOUNDATION-WORKFLOW.md  STORAGE-AND-WORKFLOW.md  WORKFLOWS.md
docs/superpowers/plans/: 2026-06-17-sample-library-cleanup.md  2026-06-21-samples-two-zone-reorg.md
docs/superpowers/specs/: 2026-07-06-sample-intelligence-hardware-crates-design.md  2026-07-08-high-precision-kicks-gate-design.md  2026-07-12-eidetic-sample-tools-documentation-design.md
library-tools/: .gitignore  README.md  pyproject.toml
library-tools/docs/superpowers/specs/: 2026-06-18-review-abbrev-classification-design.md
library-tools/src/librarytools/: analyze.py  benchmark.py  benchmark_cli.py  classifier.py  classify.py  config.py  profiles.py  review.py  rolecleanup.py  rolecleanup_cli.py  sort.py
library-tools/tests/: test_analyze.py  test_benchmark.py  test_classifier.py  test_classify.py  test_review.py  test_rolecleanup.py  test_sort.py
sample-tools/: .gitignore  README.md  pyproject.toml  requirements.txt
sample-tools/manifests/: digitakt.txt  octatrack.txt  tr8s.txt
sample-tools/src/sampletools/: __init__.py  cli.py  config.py  convert.py  export.py  naming.py  probe.py
